--- a/.github/workflows/Phicomm K2P Default.yml
+++ b/.github/workflows/Phicomm K2P Default.yml
@@ -7,14 +7,14 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: XiaoMi MiNi Default
+name: Phicomm K2P Default
 
 on:
   push:
     branches: 
       - master
   schedule:
-    - cron: 0 20 * * *
+    - cron: 0 0 * * 5
   release:
     types: [published]
 
