--- a/.github/workflows/Phicomm K2P Only SSR.yml
+++ b/.github/workflows/Phicomm K2P Only SSR.yml
@@ -7,14 +7,14 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: XiaoMi MiNi Only SSR
+name: Phicomm K2P Only SSR
 
 on:
   push:
     branches: 
       - master
   schedule:
-    - cron: 0 20 * * *
+    - cron: 0 0 * * 5
   release:
     types: [published]
 
@@ -183,10 +183,10 @@ jobs:
           # EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-          # cat >> .config <<EOF
-          # # CONFIG_TARGET_IMAGES_PAD is not set
-          # # CONFIG_VMDK_IMAGES is not set
-          # EOF
+          cat >> .config <<EOF
+          # CONFIG_TARGET_IMAGES_PAD is not set
+          # CONFIG_VMDK_IMAGES is not set
+          EOF
 
           # 
           # ========================固件定制部分结束========================
