--- a/.github/workflows/XiaoMi MiNi Default.yml
+++ b/.github/workflows/XiaoMi MiNi Default.yml
@@ -55,6 +55,12 @@ jobs:
 
           df -h
 
+      - name: Update source code
+        run: |
+          git remote add openwrt https://github.com/coolsnowwolf/lede.git
+          git pull openwrt master
+          git remote -v
+
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
