--- a/.github/workflows/XiaoMi MiNi Other.yml
+++ b/.github/workflows/XiaoMi MiNi Other.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: XiaoMi MiNi Only SSR
+name: XiaoMi MiNi Other
 
 on:
   push:
@@ -54,12 +54,6 @@ jobs:
           # ln -s /mnt/openwrt/staging_dir ./staging_dir
 
           df -h
-
-      - name: Update source code
-        run: |
-          git remote add openwrt https://github.com/coolsnowwolf/lede.git
-          git pull openwrt master
-          git remote -v
 
       - name: Update feeds
         run: |
@@ -117,34 +111,34 @@ jobs:
           # EOF
 
           # 编译UEFI固件:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_EFI_IMAGES=y
-          EOF
+          # EOF
 
           # IPv6支持:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
           # CONFIG_PACKAGE_ipv6helper=y
-          EOF
+          # EOF
 
           # 多文件系统支持:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_PACKAGE_kmod-fs-nfs=y
           # CONFIG_PACKAGE_kmod-fs-nfs-common=y
           # CONFIG_PACKAGE_kmod-fs-nfs-v3=y
           # CONFIG_PACKAGE_kmod-fs-nfs-v4=y
           # CONFIG_PACKAGE_kmod-fs-ntfs=y
           # CONFIG_PACKAGE_kmod-fs-squashfs=y
-          EOF
+          # EOF
 
           # USB3.0支持:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_PACKAGE_kmod-usb-ohci=y
           # CONFIG_PACKAGE_kmod-usb-ohci-pci=y
           # CONFIG_PACKAGE_kmod-usb2=y
           # CONFIG_PACKAGE_kmod-usb2-pci=y
           # CONFIG_PACKAGE_kmod-usb3=y
-          EOF
+          # EOF
 
           # 常用LuCI插件选择:
           cat >> .config <<EOF
@@ -172,13 +166,13 @@ jobs:
           EOF
 
           # LuCI主题:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_PACKAGE_luci-theme-argon=y
           # CONFIG_PACKAGE_luci-theme-netgear=y
-          EOF
+          # EOF
 
           # 常用软件包:
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_PACKAGE_curl=y
           # CONFIG_PACKAGE_htop=y
           # CONFIG_PACKAGE_nano=y
@@ -186,12 +180,28 @@ jobs:
           # CONFIG_PACKAGE_tree=y
           # CONFIG_PACKAGE_vim-fuller=y
           # CONFIG_PACKAGE_wget=y
-          EOF
+          # EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
-          cat >> .config <<EOF
+          # cat >> .config <<EOF
           # CONFIG_TARGET_IMAGES_PAD is not set
           # CONFIG_VMDK_IMAGES is not set
+          # EOF
+
+          # Xlnetacc:
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-xlnetacc=y
+          EOF
+
+          # Aria2:
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-aria2=y
+          EOF
+
+          # Samba:
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-samba=y
+          CONFIG_PACKAGE_luci-app-samba4=y
           EOF
 
           # 
