--- a/.github/workflows/XiaoMi MiNi Self.yml
+++ b/.github/workflows/XiaoMi MiNi Self.yml
@@ -117,7 +117,6 @@ jobs:
 
           # 取消编译的插件
           cat >> .config <<EOF
-          # CONFIG_PACKAGE_adbyby is not set
           # CONFIG_PACKAGE_coreutils is not set
           # CONFIG_PACKAGE_dns2socks is not set
           # CONFIG_PACKAGE_etherwake is not set
@@ -178,11 +177,11 @@ jobs:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-          CONFIG_PACKAGE_luci-app-adbyby-plus=y
           EOF
 
           # adby
           cat >> .config <<EOF
+          CONFIG_PACKAGE_adbyby=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           EOF
 
