--- a/.github/workflows/XiaoMi MiNi Self.yml
+++ b/.github/workflows/XiaoMi MiNi Self.yml
@@ -16,7 +16,7 @@ on:
   schedule:
     - cron: 0 0 * * 5
   release:
-    types: [published]
+    types: [edited]
 
 jobs:
 
@@ -184,6 +184,17 @@ jobs:
           CONFIG_PACKAGE_adbyby=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           EOF
+
+          # baidu
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-baidupcs-web=y
+          EOF
+
+          # neteasy
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-unblockmusic=y
+          EOF
+
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
           cat >> .config <<EOF
