--- a/.github/workflows/XiaoMi MiNi SSR Only.yml
+++ b/.github/workflows/XiaoMi MiNi SSR Only.yml
@@ -225,6 +225,6 @@ jobs:
       - name: Upload firmware
         uses: actions/upload-artifact@master
         with:
-          name: OpenWrt_firmware
-          path: ./bin/targets/
+          name: Sysupgrade
+          path: ./bin/targets/ramips/mt7620/openwrt-ramips-mt7620-xiaomi_miwifi-mini-squashfs-sysupgrade.bin
 
