--- a/.github/workflows/K2P SSR Only copy.yml
+++ b/.github/workflows/K2P SSR Only copy.yml
@@ -80,26 +80,26 @@ jobs:
           # 取消编译的插件
           cat >> .config <<EOF
           # CONFIG_PACKAGE_adbyby is not set
-          # CONFIG_PACKAGE_coreutils is not set
-          # CONFIG_PACKAGE_dns2socks is not set
+          CONFIG_PACKAGE_coreutils is not set
+          CONFIG_PACKAGE_dns2socks is not set
           # CONFIG_PACKAGE_etherwake is not set
-          # CONFIG_PACKAGE_ip-full is not set
-          # CONFIG_PACKAGE_ipset is not set
-          # CONFIG_PACKAGE_iptables-mod-tproxy is not set
+          CONFIG_PACKAGE_ip-full is not set
+          CONFIG_PACKAGE_ipset is not set
+          CONFIG_PACKAGE_iptables-mod-tproxy is not set
           # CONFIG_PACKAGE_kmod-fast-classifier is not set
-          # CONFIG_PACKAGE_kmod-ipt-tproxy is not set
+          CONFIG_PACKAGE_kmod-ipt-tproxy is not set
           # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
           # CONFIG_PACKAGE_kmod-shortcut-fe is not set
           # CONFIG_PACKAGE_kmod-tcp-bbr is not set
           # CONFIG_PACKAGE_libcap-ng is not set
-          # CONFIG_PACKAGE_libelf is not set
-          # CONFIG_PACKAGE_libev is not set
-          # CONFIG_PACKAGE_libipset is not set
-          # CONFIG_PACKAGE_libmbedtls is not set
-          # CONFIG_PACKAGE_libmnl is not set
-          # CONFIG_PACKAGE_libnet-1.2.x is not set
-          # CONFIG_PACKAGE_libpcap is not set
-          # CONFIG_PACKAGE_libsodium is not set
+          CONFIG_PACKAGE_libelf is not set
+          CONFIG_PACKAGE_libev is not set
+          CONFIG_PACKAGE_libipset is not set
+          CONFIG_PACKAGE_libmbedtls is not set
+          CONFIG_PACKAGE_libmnl is not set
+          CONFIG_PACKAGE_libnet-1.2.x is not set
+          CONFIG_PACKAGE_libpcap is not set
+          CONFIG_PACKAGE_libsodium is not set
           # CONFIG_PACKAGE_libuuid is not set
           # CONFIG_PACKAGE_luci-app-accesscontrol is not set
           # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
@@ -120,18 +120,18 @@ jobs:
           # CONFIG_PACKAGE_luci-app-webadmin is not set
           # CONFIG_PACKAGE_luci-app-wol is not set
           # CONFIG_PACKAGE_luci-lib-fs is not set
-          # CONFIG_PACKAGE_microsocks is not set
+          CONFIG_PACKAGE_microsocks is not set
           # CONFIG_PACKAGE_miniupnpd is not set
           # CONFIG_PACKAGE_nlbwmon is not set
-          # CONFIG_PACKAGE_pdnsd-alt is not set
-          # CONFIG_PACKAGE_resolveip is not set
-          # CONFIG_PACKAGE_shadowsocks-libev-config is not set
-          # CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
-          # CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
-          # CONFIG_PACKAGE_shadowsocksr-libev-alt is not set
+          CONFIG_PACKAGE_pdnsd-alt is not set
+          CONFIG_PACKAGE_resolveip is not set
+          CONFIG_PACKAGE_shadowsocks-libev-config is not set
+          CONFIG_PACKAGE_shadowsocks-libev-ss-local is not set
+          CONFIG_PACKAGE_shadowsocks-libev-ss-redir is not set
+          CONFIG_PACKAGE_shadowsocksr-libev-alt is not set
           # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
-          # CONFIG_PACKAGE_simple-obfs is not set
-          # CONFIG_PACKAGE_tcpping is not set
+          CONFIG_PACKAGE_simple-obfs is not set
+          CONFIG_PACKAGE_tcpping is not set
           # CONFIG_PACKAGE_vlmcsd is not set
           # CONFIG_PACKAGE_vsftpd-alt is not set
           # CONFIG_PACKAGE_wol is not set
@@ -139,10 +139,9 @@ jobs:
 
           # SSR
           cat >> .config <<EOF
+          CONFIG_DEFAULT_luci-app-mtwifi=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
