--- a/.github/workflows/K2P SSR Only copy.yml
+++ b/.github/workflows/K2P SSR Only copy.yml
@@ -177,5 +177,4 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: Sysupgrade
-          path: ./bin/targets/ramips/mt7620/openwrt-ramips-mt7620-xiaomi_miwifi-mini-squashfs-sysupgrade.bin
-
+          path: ./bin/targets/
