--- a/.github/workflows/K2P SSR Defalut.yml
+++ b/.github/workflows/K2P SSR Defalut.yml
@@ -77,71 +77,9 @@ jobs:
           CONFIG_TARGET_IMAGES_GZIP=y
           EOF
 
-          # 取消编译的插件
+          # SSR插件选择:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_coreutils=y
-          CONFIG_PACKAGE_dns2socks=y
-          CONFIG_PACKAGE_ip-full=y
-          CONFIG_PACKAGE_ipset=y
-          CONFIG_PACKAGE_kmod-ipt-tproxy=y
-          CONFIG_PACKAGE_iptables-mod-tproxy=y
-          CONFIG_PACKAGE_libelf=y
-          CONFIG_PACKAGE_libev=y
-          CONFIG_PACKAGE_libipset=y
-          CONFIG_PACKAGE_libmbedtls=y
-          CONFIG_PACKAGE_libmnl=y
-          CONFIG_PACKAGE_libnet-1.2.x=y
-          CONFIG_PACKAGE_libpcap=y
-          CONFIG_PACKAGE_libsodium=y
-          CONFIG_PACKAGE_microsocks=y
-          CONFIG_PACKAGE_pdnsd-alt=y
-          CONFIG_PACKAGE_resolveip=y
-          CONFIG_PACKAGE_shadowsocks-libev-config=y
-          CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-          CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-          CONFIG_PACKAGE_shadowsocksr-libev-alt=y
-          CONFIG_PACKAGE_simple-obfs=y
-          CONFIG_PACKAGE_tcpping=y
-          # CONFIG_PACKAGE_adbyby is not set
-          # CONFIG_PACKAGE_etherwake is not set
-          # CONFIG_PACKAGE_kmod-fast-classifier is not set
-          # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-          # CONFIG_PACKAGE_kmod-shortcut-fe is not set
-          # CONFIG_PACKAGE_kmod-tcp-bbr is not set
-          # CONFIG_PACKAGE_libcap-ng is not set
-          # CONFIG_PACKAGE_libuuid is not set
-          # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-          # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-          # CONFIG_PACKAGE_luci-app-arpbind is not set
-          # CONFIG_PACKAGE_luci-app-autoreboot is not set
-          # CONFIG_PACKAGE_luci-app-ddns is not set
-          # CONFIG_PACKAGE_luci-app-filetransfer is not set
-          # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-          # CONFIG_PACKAGE_luci-app-ramfree is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-          # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-          # CONFIG_PACKAGE_luci-app-sfe is not set
-          # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-          # CONFIG_PACKAGE_luci-app-upnp is not set
-          # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-          # CONFIG_PACKAGE_luci-app-vsftpd is not set
-          # CONFIG_PACKAGE_luci-app-webadmin is not set
-          # CONFIG_PACKAGE_luci-app-wol is not set
-          # CONFIG_PACKAGE_luci-lib-fs is not set
-          # CONFIG_PACKAGE_miniupnpd is not set
-          # CONFIG_PACKAGE_nlbwmon is not set
-          # CONFIG_PACKAGE_shadowsocksr-libev-ssr-local is not set
-          # CONFIG_PACKAGE_vlmcsd is not set
-          # CONFIG_PACKAGE_vsftpd-alt is not set
-          # CONFIG_PACKAGE_wol is not set
-          EOF
-
-          # SSR
-          cat >> .config <<EOF
-          CONFIG_DEFAULT_luci-app-mtwifi=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
@@ -170,11 +108,11 @@ jobs:
       - name: Upload config.buildinfo
         uses: actions/upload-artifact@master
         with:
-          name: config.seed
+          name: Config
           path: ./bin/targets/*/*/config.buildinfo
 
       - name: Upload firmware
         uses: actions/upload-artifact@master
         with:
           name: Sysupgrade
-          path: ./bin/targets/
+          path: ./bin/targets/ramips/mt7621/openwrt-ramips-mt7621-phicomm_k2p-squashfs-sysupgrade.bin
