--- a/.github/workflows/K2P SSR Only.yml
+++ b/.github/workflows/K2P SSR Only.yml
@@ -7,14 +7,14 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
 
-name: OpenWrt-CI
+name: K2P SSR Only
 
 on:
   schedule:
     - cron: 0 20 * * *
   push:
-    tags:
-      - '*'
+    branches:
+      - master
 
 jobs:
 
