--- a/.github/workflows/XiaoMi MiNi SSR Only.yml
+++ b/.github/workflows/XiaoMi MiNi SSR Only.yml
@@ -58,15 +58,15 @@ jobs:
           CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
           EOF
 
-          # 固件压缩:
+          # ZIP:
           cat >> .config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
           EOF
 
-          # SSR
+          # Usage
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-ssr-plus=y
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+          CONFIG_PACKAGE_luci-app-frpc=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
